# shunkan

./: .gitignore  Cargo.toml  implementation_plan.html  learnings.html  memory.html  prd.html  research.html  stack.html  tasks.html  testing.html  usage.html
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: crypto.rs  discovery.rs  hashing.rs  history.rs  lib.rs  protocol.rs  transport.rs
core/tests/: integration_tests.rs
desktop-linux/src/: app.js  index.html  styles.css
desktop-linux/src-tauri/: Cargo.toml
desktop-linux/src-tauri/src/: clipboard.rs  commands.rs  main.rs
mobile-android/: build.gradle.kts  settings.gradle.kts
mobile-android/app/: build.gradle.kts
shunkan-core/: Cargo.toml
shunkan-core/src/: lib.rs
