[package]
name = "shunkan-core"
version = "0.1.0"
edition = "2021"
description = "P2P clipboard sync and file sharing engine for Project Shunkan"

[dependencies]
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
mdns-sd = "0.11"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
