[package]
name = "shunkan-desktop"
version = "0.1.0"
edition = "2021"
description = "Shunkan P2P clipboard sync — Linux desktop daemon"

[[bin]]
name = "shunkan-desktop"
path = "src/main.rs"

[dependencies]
shunkan-core = { path = "../../core" }
tokio = { version = "1", features = ["full"] }
arboard = "3"
log = "0.4"
env_logger = "0.11"
blake3 = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hostname = "0.4"
